--- a/peliculas3.html
+++ b/peliculas3.html
@@ -11,7 +11,7 @@
         <h1>Sugerencias</h1>
         <nav>
             <ul>
-                <li><a href="peliculas1.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="peliculas2.html">Mis propuestas</a></li>
                 <li><a href="peliculas3.html">Sugerencias</a></li>
             </ul>
