modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <h1>¿No sabes que ver?</h1>
+        <h1>¿No sabes qué ver?</h1>
         <p>¡Bienvenido a nuestra página de recomendaciones de series y películas! </p>
         <section>
             <p>¿Alguna vez te has encontrado frente a la pantalla sin tener idea de qué ver? ¡No te preocupes más! Estamos aquí para ayudarte a descubrir emocionantes series y películas que se adapten a tus gustos y estado de ánimo.</p>
