new file:   ScriptPeliculas.js 	modified:   index.html 	deleted:    script.js 	modified:   test.html

--- a/test.html
+++ b/test.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Test</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="StylesPeliculas.css">
+    <script src="ScriptPeliculas.js" defer></script>
 </head>
 <body>
     <header>
@@ -13,9 +13,8 @@
     </header>
     <main>
         <div id="question-container">
-            <!-- La pregunta y respuestas serán agregadas dinámicamente aquí -->
         </div>
-        <button id="submit-btn">Submit</button>
+        <button id="next-btn" style="display: none;">Next</button>
         <div id="result" style="display: none;"></div>
     </main>
     <footer>
