--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="peliculas2.html">Mis propuestas</a></li>
                 <li><a href="peliculas3.html">Sugerencias</a></li>
+                <li><a href="test.html">test</a></li>
+                <li><a href="peliculas3.html">Sugerencias</a></li>
             </ul>
         </nav>
     </header>
