modified:   StylesPeliculas.css 	modified:   index.html 	modified:   peliculas2.html 	modified:   peliculas3.html 	modified:   test.html

--- a/test.html
+++ b/test.html
@@ -10,6 +10,15 @@
 <body>
     <header>
         <h1>Movie Test</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="peliculas2.html">Mis propuestas</a></li>
+                <li><a href="test.html">test</a></li>
+                <li><a href="peliculas3.html">Sugerencias</a></li>
+                <li><a href="peliculas3.html">Sugerencias</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div id="question-container">
@@ -18,7 +27,7 @@
         <div id="result" style="display: none;"></div>
     </main>
     <footer>
-        <p>&copy; 2024 Movie Test</p>
+        <p>&copy; 2024 Pablo Asín</p>
     </footer>
 </body>
 </html>
