modified:   ScriptPeliculas.js 	modified:   test.html

--- a/test.html
+++ b/test.html
@@ -24,6 +24,10 @@
         </div>
         <button id="next-btn" style="display: none;">Next</button>
         <div id="result" style="display: none;"></div>
+        <div id="score">
+            <p>Correctas: <span id="correct-count">0</span></p>
+            <p>Incorrectas: <span id="incorrect-count">0</span></p>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Pablo Asín</p>
