--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="StylesPeliculas.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -15,8 +15,8 @@
         <canvas id="results-chart" width="400" height="400"></canvas>
     </main>
     <footer>
-        <p>&copy; 2024 Movie Test</p>
+        <p>&copy; 2024 Pablo Asín</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="ScriptPeliculas.js"></script>
 </body>
 </html>
