--- a/results.html
+++ b/results.html
@@ -6,10 +6,11 @@
     <title>Results</title>
     <link rel="stylesheet" href="StylesPeliculas.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="ScriptPeliculas.js"></script>
 </head>
 <body>
     <header>
-        <h1>Results</h1>
+        <h1>Resultados</h1>
     </header>
     <main>
         <canvas id="results-chart" width="400" height="400"></canvas>
