--- a/results.html
+++ b/results.html
@@ -6,11 +6,19 @@
     <title>Results</title>
     <link rel="stylesheet" href="StylesPeliculas.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="ScriptPeliculas.js"></script>
+
 </head>
 <body>
     <header>
         <h1>Resultados</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="peliculas2.html">Mis propuestas</a></li>
+                <li><a href="test.html">test</a></li>
+                <li><a href="peliculas3.html">Sugerencias</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <canvas id="results-chart" width="400" height="400"></canvas>
@@ -18,6 +26,7 @@
     <footer>
         <p>&copy; 2024 Pablo Asín</p>
     </footer>
-    <script src="ScriptPeliculas.js"></script>
+    <!-- <script src="ScriptPeliculas.js"></script> -->
+    <script  src="results.js"></script>
 </body>
 </html>
