--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="peliculas2.html">Mis propuestas</a></li>
-                <li><a href="test.html">test</a></li>
+                <li><a href="test.html">Test</a></li>
                 <li><a href="peliculas3.html">Sugerencias</a></li>
             </ul>
         </nav>
