--- a/peliculas3.html
+++ b/peliculas3.html
@@ -18,18 +18,20 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h2>Deja tu reseña:</h2>
-        <form action="sugerencias.html" method="post">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required><br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
-            <label for="message">Reseña:</label><br>
-            <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
-            <input type="submit" value="Enviar">
-        </form>
-    </main>
+    <div class="content">
+        <main>
+            <h2>Deja tu reseña:</h2>
+            <form action="sugerencias.html" method="post">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br><br>
+                <label for="message">Reseña:</label><br>
+                <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
+                <input type="submit" value="Enviar">
+            </form>
+        </main>
+    </div>
     <footer>
         <p>&copy; 2024 Pablo Asín</p>
     </footer>
