--- a/test.html
+++ b/test.html
@@ -19,16 +19,18 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div id="question-container">
-        </div>
-        <button id="next-btn" style="display: none;">Next</button>
-        <div id="result" style="display: none;"></div>
-        <div id="score">
-            <p>Correctas: <span id="correct-count">0</span></p>
-            <p>Incorrectas: <span id="incorrect-count">0</span></p>
-        </div>
-    </main>
+    <div class="content">
+        <main>
+            <div id="question-container">
+            </div>
+            <button id="next-btn" style="display: none;">Next</button>
+            <div id="result" style="display: none;"></div>
+            <div id="score">
+                <p>Correctas: <span id="correct-count">0</span></p>
+                <p>Incorrectas: <span id="incorrect-count">0</span></p>
+            </div>
+        </main>
+    </div>
     <footer>
         <p>&copy; 2024 Pablo Asín</p>
     </footer>
