--- a/results.html
+++ b/results.html
@@ -20,9 +20,11 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <canvas id="results-chart" width="400" height="400"></canvas>
-    </main>
+    <div class="content">
+        <main>
+            <canvas id="results-chart" width="400" height="400"></canvas>
+        </main>
+    </div>
     <footer>
         <p>&copy; 2024 Pablo Asín</p>
     </footer>
